--- a/PC Dashboard/PC Dashboard.csproj
+++ b/PC Dashboard/PC Dashboard.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Images\Icons\controllericon.png" />
     <None Remove="Images\Icons\exitbutton.png" />
+    <None Remove="Images\noimage_600x900.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fonts\" />
@@ -31,6 +32,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\Icons\exitbutton.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\noimage_600x900.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
