--- a/PC Dashboard/PC Dashboard.csproj
+++ b/PC Dashboard/PC Dashboard.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
+	<UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
@@ -25,6 +26,7 @@
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="ValveKeyValue" Version="0.8.2.162" />
     <PackageReference Include="VirtualizingWrapPanel" Version="1.5.7" />
+    <PackageReference Include="WindowsDisplayAPI" Version="1.3.0.13" />
     <PackageReference Include="XInputium" Version="1.2.0" />
   </ItemGroup>
   <ItemGroup>
